# GPGPU-with-GLES

examples/: CMakeLists.txt
examples/mat_transpose/: CMakeLists.txt  mat_transpose.c
include/: gpgpu_gles.h
shaders/: mat_transpose.fs
src/: gpgpu_gles.c
src/include/: shaders.h
